--- a/botw/css/botw.css
+++ b/botw/css/botw.css
@@ -39,6 +39,184 @@ a {
 	color: #878182;
 }
 
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+
+#navbar {
+	position: fixed;
+	display: flex;
+	height: 8%;
+	width: 100%;
+	top: 0;
+	background: white;
+	align-items: center;
+	margin: auto;
+	z-index: 100;
+}
+
+
+#workbtn { 
+	float: left;
+	margin-right: 50px;
+	margin-left: 50px;
+	margin-top: 13px;
+	font-family: 'oreg'; 
+	font-size: 4em;
+	letter-spacing: 2px;
+	color: white;
+ }
+
+ #workbtn:hover a {
+ 	color: #EF9A9A;
+ }
+
+#intro { 
+	padding-top: 15%;
+	height: 30%;
+	overflow: hidden;
+	display: flex;
+	align-items: center;
+}
+
+#container {
+	margin: auto;
+	top: 20%;
+}
+
+#intropic { 
+	position: absolute;
+	left: 0;
+	width: 100%;
+	overflow: hidden;
+	z-index: -1;
+ }
+
+ #title {
+	margin: auto;
+	text-align: center;
+	font-family: "obold"; 
+	letter-spacing: 5px;
+	font-size: 10em;
+	z-index: 1;
+	color: #545E77;
+	padding: .2em 0 .2em 0;
+ }
+
+#description {
+	font-family: 'oblack'; 
+	font-size: 3em;
+	letter-spacing: 2px;
+ 	text-align: center;
+ 	padding: .2em .7em .2em .7em;
+ 	color: #37474F;
+
+}
+
+#timeframe {
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande"; 
+	font-size: 4em;
+	text-align: center;
+	padding: .2em 0 .2em 0;
+	font-family: "obold"; 
+	letter-spacing: 5px;
+}
+
+#why, #process, #userneeds, #thechallenge, #ideation, #prototyping, #product, #usertesting, #lessons { 
+	margin-right: 5%;
+	margin-left: 5%;
+	margin-top: 3%;
+	margin-bottom: 3%;
+	float: top;
+	position: relative;
+	overflow: auto;
+}
+
+
+#whytext {
+	text-align: center;
+	margin-right: 10%;
+	margin-left: 10%;
+}
+
+.box, .box2 {
+	padding: 5% 2% 5% 2%;
+}
+
+.box2 {
+	background-color: #fafbfb;
+}
+
+#muggingimgs {
+	width: 100%;
+	z-index: 1;
+	clear:both;
+}
+
+#text {
+	clear:both;
+	padding-top: 1%;
+}
+
+
+/*fonts*/
+
+p {
+    font-family: light;
+    font-size: 1.5em;
+}
+
+.subtitle {
+    font-family: obold;
+    font-size: 3em;
+    padding-top: .8em;
+    padding-bottom: .8em;
+    letter-spacing: .03em;
+    line-height: 1em;
+}
+
+
+
+.caption {
+	margin-top: 2%;
+	text-align: center; 
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande"; 
+	font-size: 14px;
+}
+
+/*pic decoration*/
+
+#mobilebanking, #survey, #insights, #thoughtprocess, #survey, #customerjourney, #brainstorm, #excelfeatures {
+	display: block;
+	margin: auto;
+}
+
+#mobilebanking {
+	width: 80%;
+}
+
+#survey, #customerjourney, #brainstorm {
+	width: 100%;
+	padding-top: 2%;
+}
+
+#insights, #thoughtprocess {
+	width: 100%;
+	padding-bottom: 3%;
+	padding-top: 3%;
+}
+
+#insights, #excelfeatures {
+	width: 100%;
+}
+
+
+
+}
+
+
+@media only screen 
+and (min-device-width : 500px)  {
 
 #intro { 
 	top: 0%;
@@ -202,9 +380,6 @@ p {
  }
 
 
-
-
-
-
+}
 
 
