--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,268 @@ body {
 
 /*positioning skeletons*/
 
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+
+#welcomepage {
+	float: top;
+	position: relative;
+	height: 100%;
+}
+
+ #projects {
+	position: relative;
+	padding-top: 0%;
+	height: 90%;
+	margin: auto;
+	z-index: 3;
+	display: flex;	
+	margin-right: 5%;
+	margin-left: 5%;
+}
+
+#leftside {
+	align-items: center;
+	position: relative;
+	width: 100%;
+}
+
+#rightside {
+	align-items: center;
+	float: right;
+	position: relative;
+	height: 100%;
+	width: 50%;
+}
+
+.projectdisplay {
+	display: flex;
+	margin-top: 12%;
+	margin-right: 10%;
+	margin-left: 10%;
+	height: 65%;
+}
+
+
+
+#thanks {
+	float: top;
+	position: relative;
+	height: 90%;
+}
+
+/*formatting inside boxes*/
+#navbar {
+	position: fixed;
+	display: flex;
+	height: 10%;
+	width: 100%;
+	top: 0;
+	background: white;
+	align-items: center;
+	justify-content: center;
+	z-index: 100;
+}
+
+
+#workbtn, #skillsbtn, #miscbtn, #resumebtn { 
+	float: left;
+	margin-right: 75px;
+	margin-left: 75px;
+	margin-top: 13px;
+	font-family: 'oreg'; 
+	font-size: 3.5em;
+	letter-spacing: 2px;
+ }
+
+ #miscbtn, #rightside, #misc, #thanks {
+ 	display: none;
+
+ }
+
+a {
+	text-decoration: none;
+	color: #878182;
+}
+
+a.link#hustlelink, a.link#snickerpage, a.link#safelylink, a.link#botwlink, a.link#k812link {
+	color: #7585BC;
+	font-family: 'oreg'; 
+	font-size: 1.2em;
+	letter-spacing: 3px;
+}
+
+#workbtn:hover a, #skillsbtn:hover a, #miscbtn:hover a, #resumebtn:hover a {
+	color: #FF7043;
+	cursor: pointer;
+}
+
+#text {
+	margin-top: 12%;
+	margin-right: 10%;
+	margin-left: 10%;
+	height: 50%;
+}
+
+#projectlist a, li {
+	font-family: "light"; 
+	font-size: 3.2em;
+	font-weight: lighter;
+	line-height: 1.2;
+	letter-spacing: 0.5px;
+	color: #474747;
+}
+
+#projectlist {
+	padding-top: 15%;
+}
+
+#snickerpage.link:link, #hustlelink.link:link, #safelylink.link:link, #botwlink.link:link, #k812link.link:link, #pbllink.link:link 
+ {
+	text-decoration: none;
+	color: #7585BC;
+}
+
+#snickerpage.link:hover, #hustlelink.link:hover, #safelylink.link:hover, #botwlink.link:hover, #k812link.link:hover, #pbllink.link:hover 
+ {
+	color: #F29679;
+}
+
+
+ul { 
+	list-style-type: none;
+ }
+
+li {
+	padding: 7px 0px;
+}
+
+/*welcome section*/
+
+svg {
+	width: 100%;
+	height: 100%;
+}
+
+#sizeanimation {
+	padding-top: 35%;
+	height: 17%;
+	width: 60%;
+	margin: auto;
+	display: flex; 
+}
+#productdesigner {
+	display: flex;
+	height: 20%;
+}
+
+
+#name {
+	display: flex;
+	margin: auto;
+	z-index: 10;
+	height: 30%;
+	width: 90%;
+}
+
+#molls {
+	margin: auto;
+	height: 100%;
+
+}
+
+
+#hustleslide, #botwimg, #safelyscreens, #botwimg, #teffwebsite, #snickerslide3, #safelyscreens {
+	width: 100%;
+	display: flex;
+	margin: auto;
+	display: none;
+}
+
+
+#screen1, #screen2, #screen3 {
+	float: left;
+	margin-left: 5%;
+	width: 40%;
+	margin-top: 5%;
+}
+
+#writing {
+	width: 50%;
+	display: block;
+	margin: auto;
+}
+
+/*misc section*/
+
+#misc {
+	height: 60%;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+#container {
+	margin: auto;
+}
+
+#formatter {
+	height: 20%;
+	width: 90%;
+	margin: auto;
+	text-align: center;
+	font-family: 'light'; 
+	font-size: 3em;
+	font-weight: lighter;
+	line-height: 1.5;
+	letter-spacing: 0.5px;
+	color: #474747;
+	top: 20%;
+}
+
+#button {
+	margin: auto;
+	margin-top: 10px;
+	width: 50%;
+	height: 10%;
+	cursor: pointer;
+	text-align: center;
+	vertical-align: center;
+	border: solid;
+	border-color: #FF7043;
+	font-family: 'oreg'; 
+	padding: .4em 0 0 0;
+	font-size: 4.5em;
+	letter-spacing: 2px;
+}
+
+#button:hover {
+	transition: background-color .5s ease;
+	background-color: #FF7043;
+}
+
+#button:hover a {
+	color: white;
+}
+
+
+/*animations*/
+
+#projects {
+/*	background-color: blue;
+*/border: 1px red;
+}
+
+
+
+
+}
+
+
+@media only screen 
+and (min-device-width : 500px)  {
+
 #welcomepage {
 	float: top;
 	position: relative;
@@ -259,4 +521,4 @@ svg {
 */border: 1px red;
 }
 
-
+}
