--- a/snickerpage/css/snickerpage.css
+++ b/snickerpage/css/snickerpage.css
@@ -111,7 +111,6 @@ and (max-device-width : 480px) {
 }
 
 #timeframe {
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande"; 
 	font-size: 4em;
 	text-align: center;
 	padding: .2em 0 .2em 0;
@@ -163,7 +162,8 @@ and (max-device-width : 480px) {
 
 p, ul {
     font-family: light;
-    font-size: 1.5em;
+    font-size: 2em;
+	line-height: .5em;
 }
 
 
@@ -183,7 +183,7 @@ p, ul {
 
 #emphasisnospace {
 	font-family: oreg;
-    font-size: 2em;
+    font-size: 3em;
     letter-spacing: .1em;
     padding-bottom: .6em;
 }
